crates/crustcore-tool-macro/tests/ui/unknown_reversibility.stderr
error: unknown reversibility `Resversible`; expected one of Reversible, ReversibleWithCleanup, Irreversible, Destructive
 --> tests/ui/unknown_reversibility.rs:6:30
  |
6 | #[crust_tool(reversibility = "Resversible")]
  |                              ^^^^^^^^^^^^^

warning: unused imports: `HostTool` and `ToolError`
 --> tests/ui/unknown_reversibility.rs:4:25
  |
4 | use crustcore_toolkit::{HostTool, ToolError};
  |                         ^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
